# voechoal

./: bun.lockb  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs  sharedref.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/background/: mod.rs
src/lib/: Audio.svelte  types.ts
src/routes/: +page.svelte
