[package]
name = "voechoal"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "voechoal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
thiserror = "1.0.61"
hound = "3.5.1"
cuid2 = "0.1.2"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", features = [
  "hipblas",
] }
anyhow = "1.0.86"
rodio = "0.19.0"
